# tufts_service_robots

./: .gitignore  574_3rd_floor.pgm  574_3rd_floor.yaml  574_3rd_floor_cleaned.pgm  574_3rd_floor_cleaned.yaml  README.md
data_collector/: CMakeLists.txt  README.md  package.xml
data_collector/launch/: data_collector.launch
data_collector/scripts/: set_pose_estimate.py  traverse_map_by_waypoints.py
data_collector/share/: traversal_config.yaml
poi_name_locator/: CMakeLists.txt  README.md  package.xml
poi_name_locator/scripts/: poi_name_locator_client.py  poi_name_locator_server.py  poi_name_patrol.py
poi_name_locator/share/: config.yaml
poi_name_locator/srv/: PoiNameLocator.srv
poi_navigator/: CMakeLists.txt  README.md  package.xml
poi_navigator/action/: GoToPoi.action
poi_navigator/scripts/: poi_navigator_client.py  poi_navigator_server.py
poi_scan/: README.md  package.xml
poi_scan/action/: PoiScan.action
poi_scan/launch/: poi_scan.launch
poi_scan/scripts/: poi_scan_client.py  poi_scan_server.py
set_pose/: README.md  package.xml
set_pose/action/: SetPose.action
set_pose/scripts/: set_pose_server.py
tbot2_filters/: CMakeLists.txt  package.xml
tbot2_launch/: CMakeLists.txt  package.xml
tbot2_logging/: CMakeLists.txt  README.rst  package.xml  setup.py
tbot2_logging/launch/: record.launch
tbot2_logging/nodes/: record
tbot2_logging/src/tbot2_logging/: directory.py  logger_node.py
tbot2_logging/tests/: test_directory.py
tbot2_sensors/: CMakeLists.txt  package.xml
tufts_halligan/: CMakeLists.txt  package.xml
(+75 files in other folders)
