<?xml version="1.0"?>
<package format="2">

  <name>tbot2_logging</name>
  <version>0.0.1</version>

  <description>Logging package that creates ROS bag files, repurposed from bwi_logging</description>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rosbag</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

</package>
